--- a/WebAPI.UI/Web.config
+++ b/WebAPI.UI/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="conntionstring" value="Data Source=10.1.155.91;Initial Catalog=XiaoChanZui;User ID=sa;Pwd=123456" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
