--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="AddressDal.cs" />
     <Compile Include="DBHelperProc.cs" />
+    <Compile Include="GoodsDAL.cs" />
+    <Compile Include="OrderDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersDal.cs" />
   </ItemGroup>
